# boss-rs

./: .env  Cargo.toml  README.md  build.rs
examples/: main.rs
migrations/2020-08-17-034024_create_posts/: down.sql  up.sql
src/: lib.rs  prelude.rs  schema.rs
src/config/: mod.rs
src/db/: mod.rs  ms.rs
src/db/ms/: models.rs
src/grpc/: mod.rs
