[package]
name = "boss"
version = "0.1.0"
authors = ["FengchenX <fengchenxiaonvsheng@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build="build.rs"

[lib]
name = "boss"
path = "src/lib.rs"

[dependencies]
simple_excel_writer = "0.1.7"
calamine = "0.16.1"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"

[dev-dependencies]

[build-dependencies]
tonic-build = "0.3.0"


[workspace]
members = [

]

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/bin/test/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/bin/test/client.rs"