[package]
name = "boss"
version = "0.1.0"
authors = ["FengchenX <fengchenxiaonvsheng@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build="build.rs"

[lib]
name = "boss"
path = "src/lib.rs"

[dependencies]
simple_excel_writer = "0.1.7"
calamine = "0.16.1"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
diesel = { version = "1.4.5", features = ["postgres", "mysql","r2d2", "chrono"] }
dotenv = "0.15.0"

actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-service = "1.0.5"
actix-cors = "0.2.0"
log = "0.4.11"
env_logger = "0.7.1"
diesel_migrations = "1.4.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
futures = "0.3.5"
failure = "0.1.8"
derive_more = "0.99.9"
jsonwebtoken = "7.2.0"
bcrypt = "0.8.1"

[dependencies.chrono]
version = "0.4.13"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[dev-dependencies]

[build-dependencies]
tonic-build = "0.3.0"


[workspace]
members = [

]

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/bin/test/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/bin/test/client.rs"